--- a/Gestion de Empleados/Gestion de Empleados.csproj
+++ b/Gestion de Empleados/Gestion de Empleados.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gerente.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Programador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
