--- a/Gestion de Empleados/Gestion de Empleados.csproj
+++ b/Gestion de Empleados/Gestion de Empleados.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Empleado.cs" />
+    <Compile Include="EmpleadoFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
